<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--<string name="app_name">V5 Harmon Kardon</string>-->
    <string name="app_name">HARMAN Field Force</string>

    <string name="activity_quiz">QuizDisplayActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_exist">Exit</string>
    <string name="action_logout">Log Out</string>
    <string name="hello_world">Hello world!</string>
    <string name="mtdsale">MTD Sale</string>
    <string name="currentsale">Current Sale</string>
    <string name="currentmtdsale"> MTD sale</string>
    <string name="currentstoretarget">Target</string>
    <string name="dailysales">Daily Sales Report</string>
    <string name="dailystock">Daily Stock</string>
    <string name="mtdsales">MTD Sales</string>
    <string name="dailydat">Daily DAT</string>
    <string name="mtddat">MTD DAT</string>
    <string name="remarks">No Sale Remarks</string>
    <string name="nosale">No Sale</string>
    <string name="newreport">New Report</string>
    <string name="modelname">Select Model</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="stockdate">Stock For</string>
    <string name="stockmodelname"> Select Model</string>
    <string name="qty">Qty</string>
    <string name="stocksubmit">Submit</string>
    <string name="btnstock">Home</string>
    <string name="dailyattandance">Daily Attandance</string>
    <string name="mtdattandance">MTD Attandance</string>
    <string name="select">Select</string>
    <string name="datsubmit">Submit</string>
    <string name="mtdhome">Home</string>
    <string name="mtdmodelname">Model</string>
    <string name="mtdqty">Qty</string>
    <string name="mtdvalue">Value</string>
    <string name="dathome">Home</string>
    <string name="totalpresent">Present</string>
    <string name="absent">Absent</string>
    <string name="off">Off</string>
    <string name="totaldays">Total Days</string>
    <string name="Unmarked"></string>
    <string name="unmarked">Unmarked</string>
    <string name="salehome">Home</string>
    <string name="salefor">"Sale for "</string>
    <string name="enterqty">Enter Qty</string>
    <string name="lblWP">Comio ISD</string>
    <string name="lblpowerby">Sponsored by V5 Global Services.</string>
    <string name="lbllogin">Login</string>
    <string name="hntenterusername">Loginid</string>
    <string name="hntenterpass">Password</string>
    <string name="lblnewsale">EOD Stock</string>
    <string name="lblmysales">Sales</string>
    <string name="lblmydat">Attendance</string>
    <string name="lblmystockreport">Stocks</string>
    <string name="lbldate">Date :</string>
    <string name="lblmodel">Model</string>
    <string name="domenstration">Demonstration</string>
    <string name="lblqty">Quantity</string>
    <string name="hntselectmodel">Select Model</string>
    <string name="lblsubmit">Submit</string>
    <string name="hntenterqty">Enter Quantity</string>
    <string name="etrdomenstration">Enter Domenstration</string>
    <string name="lbladdnewsale">New Sale</string>
    <string name="lblhome">Home</string>
    <string name="app_exit">Exit</string>
    <string name="app_exit_msg">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lbllogout">Log Out</string>
    <string name="lbledate2">Date</string>
    <string name="lblProduct">Product</string>
    <string name="lblqty2">Qty</string>
    <string name="mystock">My Stocks</string>
    <string name="newstock">New Stock</string>
    <string name="lblnewstock">New Stock</string>
    <string name="lblbstockhome">Home</string>
    <string name="btnhomedat">Home</string>
    <string name="newdatform">Mark Attendance</string>
    <string name="btnsubmitdat">Save</string>
    <string name="lbloption">Option :</string>
    <string name="lblbtnmydatreport">DAT</string>
    <string name="lbldatewisesalesitem">Sale For</string>
    <string name="lblsalefor"></string>
    <string name="lblback">Back</string>
    <string name="lblnewdat">New DAT</string>
    <string name="lblmydatreport">DAT</string>
    <string name="lblnew">New</string>
    <string name="refresh">"Refresh Products "</string>
    <string name="update">Update Sales By SMS</string>
    <string name="lblupdatedsales">Updated Sales</string>
    <string name="lblpendingsales">Pending Sales</string>
    <string name="lblmastcat">Master Category</string>
    <string name="lblsubcat">Sub Category</string>
    <string name="rememberme">Remember me</string>
    <string name="username">Loginid</string>
    <string name="lblpassword">Password</string>
    <string name="action_getupdate">Update App</string>
    <string name="lblmopupdate">MOP &amp; Display Product Update</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="IsDebug">Debug ON</string>
    <string name="release">Debug OFF</string>
    <string name="DATNotification">DATNotification</string>
    <string name="title_activity_innosols">InnosolsActivity</string>
    <string name="title_activity_pending_image">PendingImageActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_enter_sale">EnterSaleActivity</string>
    <string name="title_activity_sale_display">SaleDisplayActivity</string>
    <string name="title_activity_sale_detail">SaleDetailsScreenManagerActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_complain">ComplainActivity</string>
    <string name="title_activity_attendance">AttendanceActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_sales">SalesActivity</string>
    <string name="title_activity_target">TargetActivity</string>
    <string name="title_activity_mop">MOPActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Training">TrainingActivity</string>
    <string name="Helpdesk">Helpdesk</string>

    <string name="title_activity_attendance_display">AttendanceDisplayActivity</string>
    <string name="title_activity_my_info">MyInfoActivity</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="hr_helpline">HR Helpline</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>
    <string name="corona_bot">Corona Bot</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="your_current_location">Your current Location</string>
    <string name="rfrsh">Refresh</string>
    <string name="mark_out">Mark Out</string>
    <string name="capture_image">Capture Image</string>
    <string name="save">Save</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="current_docid">Current DocID :</string>
    <string name="your_attendance_already_marked">Your Attendance already marked!</string>
    <string name="notifications_popup">Notifications</string>
    <string name="i_read">I Read</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome !</string>


</resources>