<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_below="@id/llSlider"
        android:id="@+id/iv_survey"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_30"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/survey_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bt_nav_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54"
        android:layout_below="@+id/iv_survey"
        app:cardElevation="@dimen/size_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/fl_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_notification"
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_gravity="center"
                    android:src="@drawable/notification_bottom_nav" />

                <com.fieldforce.utility.widgets.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/notifications"
                    android:textColor="@color/btm_nav_text"
                    android:textSize="@dimen/size_9" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fl_hr_helpline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_hr_helpline"
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_gravity="center"
                    android:src="@drawable/hr_helpline" />

                <com.fieldforce.utility.widgets.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"

                    android:singleLine="true"
                    android:text="@string/hr_helpline"
                    android:textColor="@color/btm_nav_text"
                    android:textSize="@dimen/size_9" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="@dimen/size_60"
                android:visibility="gone"
                android:layout_height="match_parent">

                <com.fieldforce.utility.widgets.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/size_10"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:visibility="gone"
                    android:text="@string/corona_bot"
                    android:textColor="@color/btm_nav_text"
                    android:textSize="@dimen/size_11" />
            </FrameLayout>


            <LinearLayout
                android:id="@+id/fl_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_settings"
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_gravity="center"
                    android:src="@drawable/settings_bottom_nav" />

                <com.fieldforce.utility.widgets.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/settings"

                    android:textColor="@color/btm_nav_text"
                    android:textSize="@dimen/size_9" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fl_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_fl_log_out"
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_gravity="center"
                    android:src="@drawable/logout_footer" />

                <com.fieldforce.utility.widgets.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"

                    android:text="@string/logout"
                    android:textColor="@color/btm_nav_text"
                    android:textSize="@dimen/size_9" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/bt_corona_bot"
        android:layout_width="@dimen/size_60"
        android:visibility="gone"
        android:layout_height="@dimen/size_60"
        android:layout_above="@+id/v_bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/size_2"
        android:layout_marginEnd="@dimen/size_2"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/size_30"
        app:cardElevation="@dimen/size_10">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/size_50"
                android:layout_height="@dimen/size_50"
                android:layout_gravity="center"
                android:src="@drawable/corona_bot" />
        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/v_bottom"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_26"
        android:layout_alignBottom="@+id/bt_nav_view" />

    <RelativeLayout
        android:id="@+id/llSlider"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorEnabled="true"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"

            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#00000000"
            app:sliderIndicatorUnselectedColor="#00000000"
            app:sliderScrollTimeInSec="1" />

    </RelativeLayout>


</RelativeLayout>